# loom-agentic

./: DOCS.md  LICENSE  README.md  pyproject.toml
loom_agentic/: __init__.py  enforcement.py
loom_agentic/orchestrate/: __init__.py  graph_builder.py  ir.py  mermaid_parser.py
loom_agentic/orchestrate/tests/: test_roundtrip.py
loom_agentic/replay/: __init__.py  loader.py  mermaid_for_run.py  stepper.py
loom_agentic/replay/static/: player.html
loom_agentic/replay/tests/: test_replay_smoke.py
