[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom-agentic"
version = "0.0.1"
description = "Visual agent orchestration + observability for LangGraph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brad Coughlin" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
orchestrate = ["langgraph>=0.2"]
replay-s3 = ["boto3>=1.28"]
dev = ["pytest>=7", "langgraph>=0.2", "boto3>=1.28"]

[project.urls]
Repository = "https://github.com/bcoughlin/loom-agentic"

[tool.hatch.build.targets.wheel]
packages = ["loom_agentic"]
